--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
-
 :root {
-  --mainPink: #ef7998;
+  --mainPink: #C81717;
   --mainYellow: rgb(249, 228, 148);
   --mainWhite: #fff;
   --mainBlack: #000;
