--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
   --mainYellow: rgb(249, 228, 148);
   --mainWhite: #fff;
   --mainBlack: #000;
-  --yellowTrans: rgba(249, 228, 148, 0.5);
+  --redTrans: rgba(243, 171, 171, 0.5);
+  --yellowTrans: rgba(199, 152, 64, 0.5);
   --mainGrey: rgb(238, 238, 238);
 }
 
@@ -32,7 +33,7 @@ body {
   color: var(--mainBlack);
 }
 
-.cart-info-icon{
+.cart-info_icon{
   color: var(--mainBlack);
   cursor: pointer;
 }
@@ -51,4 +52,15 @@ body {
   color: white;
 }
 
+.cart-info:hover .cart-info_icon{
+  color: white;
+}
 
+.max-height{
+  min-height: calc(100vh - 76px);
+  background: linear-gradient(var(--redTrans), var(--yellowTrans)), url("../img/headerBck2.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
