--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --mainYellow: rgb(249, 228, 148);
   --mainWhite: #fff;
   --mainBlack: #000;
-  --redTrans: rgba(243, 171, 171, 0.5);
+  --redTrans: #e69494;
   --yellowTrans: rgba(199, 152, 64, 0.5);
   --mainGrey: rgb(238, 238, 238);
 }
@@ -14,6 +14,20 @@ body {
   color: var(--mainBlack);
 }
 
+.btn-maroon{
+  color: var(--mainMaroon) !important;
+  border-color: var(--mainMaroon) !important;
+}
+
+.btn-black{
+  color: black !important;
+  border-color: black !important;
+}
+
+.btn-black:hover{
+  color: var(--mainMaroon) !important;
+  background: black !important;
+}
 .navbar-toggler{
   outline: none !important;
 }
@@ -25,7 +39,7 @@ body {
 
 .nav-link{
   color: var(--mainMaroon);
-  transition: all 2s ease-in-out;
+  transition: all 1s ease-in-out;
   font-size: 1.5rem;
 }
 
@@ -85,3 +99,34 @@ body {
   background: black;
   color: var(--mainMaroon);
 }
+
+.about-img_container{
+  position: relative;
+}
+
+.about-img_container::before{
+  content: "";
+  position: absolute;
+  top: 1.5rem;
+  left: 1.7rem;
+  width: 100%;
+  height: 100%;
+  outline: 0.5rem solid var(--redTrans);
+  z-index: -1;
+  transition: all 1s linear;
+}
+
+.about-img_container:hover:before{
+  top:0;
+  left:0;
+}
+
+.store{
+  background: var(--mainGrey);
+}
+
+.search-box{
+  background: var(--mainMaroon);
+  color: black;
+}
+
