--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --mainMaroon: #C81717;
+  --mainMaroon: #c81717;
   --mainYellow: rgb(249, 228, 148);
   --mainWhite: #fff;
   --mainBlack: #000;
@@ -9,50 +9,51 @@
 }
 
 body {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--mainWhite);
   color: var(--mainBlack);
 }
 
-.btn-maroon{
+.btn-maroon {
   color: var(--mainMaroon) !important;
   border-color: var(--mainMaroon) !important;
 }
 
-.btn-black{
+.btn-black {
   color: black !important;
   border-color: black !important;
 }
 
-.btn-black:hover{
+.btn-black:hover {
   color: var(--mainMaroon) !important;
   background: black !important;
 }
-.navbar-toggler{
+.navbar-toggler {
   outline: none !important;
 }
 
-.toggler-icon{
+.toggler-icon {
   font-size: 2rem;
   color: var(--mainMaroon);
 }
 
-.nav-link{
+.nav-link {
   color: var(--mainMaroon);
   transition: all 1s ease-in-out;
   font-size: 1.5rem;
 }
 
-.nav-link:hover{
+.nav-link:hover {
   color: var(--mainBlack);
 }
 
-.cart-info_icon{
+.cart-info_icon {
   color: var(--mainBlack);
   cursor: pointer;
 }
 
-.cart-info{
+.cart-info {
   border: 0.1rem solid var(--mainBlack);
   color: black;
   border-radius: 0.25rem;
@@ -60,51 +61,52 @@ body {
   cursor: pointer;
 }
 
-.cart-info:hover{
+.cart-info:hover {
   background: var(--mainMaroon);
   border-color: var(--mainMaroon);
   color: white;
 }
 
-.cart-info:hover .cart-info_icon{
+.cart-info:hover .cart-info_icon {
   color: white;
 }
 
-.max-height{
+.max-height {
   min-height: calc(100vh - 76px);
-  background: linear-gradient(var(--redTrans), var(--yellowTrans)), url("../img/headerBck2.jpg");
+  background: linear-gradient(var(--redTrans), var(--yellowTrans)),
+    url("../img/headerBck2.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
-.banner{
+.banner {
   color: white;
   margin-top: -4rem;
 }
 
-.banner-link{
+.banner-link {
   font-size: 1.5rem;
   color: black;
   border: 0.2rem solid black;
 }
 
-.banner-title{
+.banner-title {
   color: var(--mainMaroon);
   font-size: 3rem;
 }
 
-.banner-link:hover{
+.banner-link:hover {
   background: black;
   color: var(--mainMaroon);
 }
 
-.about-img_container{
+.about-img_container {
   position: relative;
 }
 
-.about-img_container::before{
+.about-img_container::before {
   content: "";
   position: absolute;
   top: 1.5rem;
@@ -116,43 +118,43 @@ body {
   transition: all 1s linear;
 }
 
-.about-img_container:hover:before{
-  top:0;
-  left:0;
+.about-img_container:hover:before {
+  top: 0;
+  left: 0;
 }
 
-.store{
+.store {
   background: var(--mainGrey);
 }
 
-.search-box{
+.search-box {
   background: var(--mainMaroon);
   color: black;
 }
 
-.single-item{
+.single-item {
   transition: all 0.3 linear;
 }
 
-.single-item:hover{
+.single-item:hover {
   box-shadow: 0 10px 15px black;
 }
 
-.img-container{
+.img-container {
   position: relative;
   overflow: hidden;
   cursor: pointer;
 }
 
-.store-img{
+.store-img {
   transition: all 1s ease-in-out;
 }
 
-.img-container:hover .store-img{
+.img-container:hover .store-img {
   transform: scale(1.2);
 }
 
-.store-item-icon{
+.store-item-icon {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -163,23 +165,24 @@ body {
   transform: translate(100%, 100%);
 }
 
-.img-container:hover .store-item-icon{
+.img-container:hover .store-item-icon {
   transform: translate(0, 0);
 }
 
-.store-item-icon:hover{
+.store-item-icon:hover {
   color: white;
 }
 
-.services{
+.services {
   color: white;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/pizza-rest.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/pizza-rest.jpg");
 }
 
-.service-title{
+.service-title {
   letter-spacing: 0.5rem;
 }
 
-.service-text{
+.service-text {
   word-spacing: 0.5rem;
 }
