footer section styling

--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,21 @@ body {
 .service-text {
   word-spacing: 0.5rem;
 }
+
+.footer-title{
+  background: black;
+}
+
+.footer-contact{
+  background: var(--mainGrey);
+}
+
+.footer-icon{
+  font-size: 1.5rem;
+  color: white;
+  transition: all 0.4 ease-in-out;
+}
+
+.footer-icon:hover{
+  color: var(--mainMaroon);
+}
